--- a/backend/composer.json
+++ b/backend/composer.json
@@ -6,6 +6,7 @@
         "php": "^8.2",
         "laravel/framework": "^10.0",
         "laravel/sanctum": "^3.2",
+        "laravel/socialite": "^5.9",
         "php-amqplib/php-amqplib": "^3.5",
         "predis/predis": "^2.0",
         "guzzlehttp/guzzle": "^7.5",
