--- a/build-server/composer.json
+++ b/build-server/composer.json
@@ -1,16 +1,14 @@
 {
-    "name": "ttcs/backend",
-    "description": "Backend API for TTCS - Web Deployment SaaS Platform",
+    "name": "ttcs/build-server",
     "type": "project",
+    "description": "TTCS Build Server - Handles web build processes from queue",
+    "keywords": ["laravel", "queue", "build-server"],
+    "license": "MIT",
     "require": {
-        "php": "^8.2",
-        "laravel/framework": "^10.0",
-        "laravel/sanctum": "^3.2",
-        "laravel/socialite": "^5.9",
+        "php": "^8.1",
+        "laravel/framework": "^10.10",
         "php-amqplib/php-amqplib": "^3.5",
-        "predis/predis": "^2.0",
-        "guzzlehttp/guzzle": "^7.5",
-        "laravel/octane": "^2.0"
+        "guzzlehttp/guzzle": "^7.2"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
@@ -39,12 +37,6 @@
         ],
         "post-update-cmd": [
             "@php artisan vendor:publish --tag=laravel-assets --ansi --force"
-        ],
-        "post-root-package-install": [
-            "@php -r \"file_exists('.env') || copy('.env.example', '.env');\""
-        ],
-        "post-create-project-cmd": [
-            "@php artisan key:generate --ansi"
         ]
     },
     "extra": {
